added moatbclient.jar and added it to project properties as a dependency

--- a/MDBdebug/nbproject/project.properties
+++ b/MDBdebug/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.mdbcs.jar=mdbcs.jar
+file.reference.MOATBClient.jar=MOATBClient.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.mdbcore.classpath}:\
     ${file.reference.mdbcs.jar}:\
+    ${libs.mdbcore.classpath}:\
+    ${file.reference.MOATBClient.jar}:\
     ${libs.mplablibs_comm.classpath}:\
     ${libs.mplablibs_ext.classpath}:\
     ${libs.nb-platform.classpath}:\
