added xLog xml files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@
 /MDBdebug/MPLABXLog.xml.11
 /MDBdebug/MPLABXLog.xml.10
 /MDBdebug/groovy_output.txt
+/MDBdebug/MPLABXLog_Finest.xml.1
+/MDBdebug/MPLABXLog_Finest.xml.2
+/MDBdebug/MPLABXLog.xml.lck
+/MDBdebug/MPLABXLog_Finest.xml.5
+/MDBdebug/MPLABXLog_Finest.xml.6
+/MDBdebug/MPLABXLog_Finest.xml.3
+/MDBdebug/MPLABXLog_Finest.xml.4
+/MDBdebug/MPLABXLog_Finest.xml
+/MDBdebug/MPLABXLog_Finest.xml.9
+/MDBdebug/MPLABXLog_Finest.xml.7
+/MDBdebug/MPLABXLog_Finest.xml.8
+/MDBdebug/MPLABXLog_Finest.xml.10
