--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,10 @@
 /MDBdebug/MPLABXLog_Finest.xml.7
 /MDBdebug/MPLABXLog_Finest.xml.8
 /MDBdebug/MPLABXLog_Finest.xml.10
+/MDBdebug/MPLABXLog_Finest.xml.lck
+/MDBdebug/MPLABXLog_Finest.xml.2.lck
+/MDBdebug/MPLABXLog_Finest.xml.3.lck
+/MDBdebug/MPLABXLog_Finest.xml.1.lck
+/MDBdebug/MPLABXLog_Finest.xml.5.lck
+/MDBdebug/MPLABXLog_Finest.xml.6.lck
+/MDBdebug/MPLABXLog_Finest.xml.4.lck
