added a few new artifacts to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,14 @@
 /MDBdebug/MPLABXLog_Finest.xml.7
 /MDBdebug/MPLABXLog_Finest.xml.8
 /MDBdebug/MPLABXLog_Finest.xml.10
+/MDBdebug/MPLABXLog.xml.1.lck
+/MDBdebug/MPLABXLog.xml.4.lck
+/MDBdebug/MPLABXLog.xml.5.lck
+/MDBdebug/MPLABXLog.xml.10.lck
+/MDBdebug/MPLABXLog.xml.7.lck
+/MDBdebug/MPLABXLog.xml.8.lck
+/MDBdebug/MPLABXLog.xml.9.lck
+/MDBdebug/MPLABXLog.xml.6.lck
+/MDBdebug/MPLABXLog.xml.3.lck
+/MDBdebug/MPLABXLog.xml.2.lck
+/MDBdebug/hexandelf/33EV256GM006.elf
